<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_upload_photo"
            android:icon="@drawable/ic_file_upload_white_24dp"
            android:title="@string/upload_img" />

        <item
            android:id="@+id/nav_search_photo"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/advanced_finding" />

        <item
            android:id="@+id/nav_take_picture"
            android:icon="@drawable/ic_live_speaker_camera_dark"
            android:title="@string/take_photo" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/share" />

    </group>

</menu>